# memory-search-chatbot

./: .gitignore  README.md
backend/: app.py  pyproject.toml
backend/src/: models.py
backend/src/api/conversation/: routes.py
backend/src/globals/: environment.py
backend/src/modules/: chatter.py
frontend/: package.json  pnpm-lock.yaml  schema.ts
frontend/app/: layout.tsx  page.tsx
