[tool.poetry]
name = "chatbotdeliv"
version = "0.1.0"
description = "nabiha clone chatbot"
authors = ["Nabiha <chnabi@unc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pinecone = "^5.3.1"
openai = "^1.54.3"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
